# pathfinding-visualizer-pygame

./: .gitignore  README.md  config.json  main.py  pyproject.toml  theme.json
maps/: L-Wall.json  small_8x8.json
src/: CLEANING UP SIDEBAR class.py  __init__.py  algo_settings.py  algorithms.py  appConfig.py  button.py  button_test.py  constants.py  dropdown.py  grid.py  header.py  node.py  pathFinderApp.py  sidebar.py  test_dropdown.py  usage_example_constants.py
src/myapp/: __init__.py  algo_settings.py  algorithms.py  config.py  grid.py  node.py  pathFinderApp.py
src/myapp/ui/: __init__.py  control_panel.py  ui_layout.py  ui_types.py
tests/: test_ui_types.py
